# DriveBackup

./: .gitignore  README.md
source/: CMakeLists.txt  Drive.cpp  Drive.h  DriveBackup.sln  DriveBackup.vcxproj  DriveBackup.vcxproj._user  DriveBackup.vcxproj.filters  Makefile  Merge.cpp  Merge.h  Scan.cpp  Scan.h  build.sh  buildc.sh  main.cpp  pc.h
source/types/: Entry.h  TrashEntry.h
